<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ClinicEmployeeFunction">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            android:id="@+id/profile_table_layout"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:text="Address:"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:id="@+id/address" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:text="Phone No:"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:id="@+id/phone" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:text="Clinic name:"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:id="@+id/clinic_name" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:text="Insurance Types: "
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <CheckBox
                    android:id="@+id/insurance_type1_box"
                    android:text="@string/insurance_type1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <CheckBox
                    android:id="@+id/insurance_type2_box"
                    android:text="@string/insurance_type2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <CheckBox
                    android:id="@+id/insurance_type3_box"
                    android:text="@string/insurance_type3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:text="Payment Methods: "
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <CheckBox
                    android:id="@+id/cash_box"
                    android:text="@string/cash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <CheckBox
                    android:id="@+id/credit_card_box"
                    android:text="@string/credit_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <CheckBox
                    android:id="@+id/debit_card_box"
                    android:text="@string/debit_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <TimePicker
                    android:id="@+id/start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_span="2"/>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <TimePicker
                    android:id="@+id/end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_span="2"/>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:text="Services: "
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0" />
            </TableRow>
        </TableLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:layout_weight="1"
            android:id="@+id/update"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/update"/>
        <Button
            android:layout_weight="1"
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/cancel"/>
    </LinearLayout>
</LinearLayout>